# xfswm

./: .SRCINFO  .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  CMakeLists.txt  PKGBUILD  PRESUBMIT.sh  README.md  iwyu.imp
lib/: xfswm-init
share/applications/: xfswm.desktop
share/xsessions/: xfswm.desktop
src/: CMakeLists.txt  config.h.in  main.c
